# mcp-servers

diagram-generator/: .gitignore  DEVELOPER_GUIDE.md  QUICK_START.md  README.md  pyproject.toml  test_local.py
diagram-generator/refactor_logs/: REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  STRUCTURE_COMPARISON.md
diagram-generator/src/diagram_server/: __init__.py  __main__.py  analyzer.py  config.py  diagram_builder.py  exceptions.py  server.py
diagram-generator/src/diagram_server/core/: __init__.py  analyzer.py  builder.py  models.py
diagram-generator/src/diagram_server/server/: __init__.py  app.py  tools.py
diagram-generator/src/diagram_server/utils/: __init__.py  logging.py  paths.py
diagram-generator/tests/: __init__.py  conftest.py  test_analyzer.py  test_builder.py  test_integration.py
diagram-generator/tests/fixtures/: __init__.py  test_example.py
obsidian-server/: .env.example  .gitignore  README.md  config.py  events.py  goals.py  notes.py  pyproject.toml  server.py  servers.json  setup.py  test_setup.py  vault.py
