[project]
name = "diagram-generator"
version = "0.1.0"
description = "MCP server for generating UML and component diagrams from Python codebases"
authors = [{name = "MCP Diagram Generator"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.4.1",
    "graphviz>=0.20",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
diagram-generator = "diagram_server.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diagram_server"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
